@@ -23,6 +23,7 @@ import os
 
 import astroid
 
+from pylint import epylint as lint
 from pylint.checkers import imports
 from pylint.interfaces import UNDEFINED
 from pylint.testutils import CheckerTestCase, MessageTest, set_config
@@ -143,6 +144,38 @@ class TestImportsChecker(CheckerTestCase):
             self.checker.visit_importfrom(module.body[1])
         with self.assertNoMessages():
             self.checker.visit_importfrom(module.body[2].body[0])
+
+    @staticmethod
+    def test_relative_beyond_top_level_two() -> None:
+        output, errors = lint.py_run(
+            f"{os.path.join(REGR_DATA, 'beyond_top_two')} -d all -e relative-beyond-top-level",
+            return_std=True,
+        )
+        output2, errors2 = lint.py_run(
+            f"{os.path.join(REGR_DATA, 'beyond_top_two/namespace_package/top_level_function.py')} -d all -e relative-beyond-top-level",
+            return_std=True,
+        )
+
+        assert len(output.readlines()) == len(output2.readlines())
+        assert errors.readlines() == errors2.readlines()
+
+    @staticmethod
+    def test_relative_beyond_top_level_three() -> None:
+        output, errors = lint.py_run(
+            f"{os.path.join(REGR_DATA, 'beyond_top_three/a.py')} -d all -e relative-beyond-top-level",
+            return_std=True,
+        )
+        assert len(output.readlines()) == 5
+        assert errors.readlines() == []
+
+    @staticmethod
+    def test_relative_beyond_top_level_four() -> None:
+        output, errors = lint.py_run(
+            f"{os.path.join(REGR_DATA, 'beyond_top_four/module')} -d missing-docstring,unused-import",
+            return_std=True,
+        )
+        assert len(output.readlines()) == 5
+        assert errors.readlines() == []
 
     def test_wildcard_import_init(self) -> None:
         module = astroid.MANAGER.ast_from_module_name("init_wildcard", REGR_DATA)
