@@ -1,0 +1,2 @@
+def func(var, some_other_var):
+    pass
