@@ -1,0 +1,2 @@
+def top_message(msg):
+    return 'top_message: %s' % msg
